--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "ng2-split-pane",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A simple resizable split pane Angular 2 library",
-  "main": "split-pane.module.js",
+  "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
   "scripts": {
-    "watch": "tsc -p src -w",
-    "build": "rm -rf lib && tsc -p src"
+    "watch": "tsc -p . -w",
+    "postinstall": "typings install",
+    "build": "rm -rf lib && tsc -p .",
+    "typings": "typings"
   },
   "repository": {
     "type": "git",
@@ -40,6 +43,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "rxjs": "^5.0.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "typings": "1.3.1"
   }
 }
