--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-split-pane",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A simple resizable split pane Angular 2 library",
   "main": "split-pane.module.js",
   "scripts": {
@@ -30,8 +30,7 @@
     "url": "https://github.com/wannabegeek/ng2-split-pane/issues"
   },
   "homepage": "https://github.com/wannabegeek/ng2-split-pane/#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "typescript": "^2.2.2",
     "@angular/animations": "^4.0.1",
