--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,12 @@
 
 # Node
 node_modules/*
-complied/
+compiled/
+.vscode/
+src/
 npm-debug.log
+
+*.tgz
 
 # DO NOT IGNORE TYPESCRIPT FILES FOR NPM
 # TypeScript
