--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng2-split-pane",
-  "version": "1.3.1",
+  "name": "ng2-split-pane-patch",
+  "version": "9.0.4",
   "description": "A simple resizable split pane Angular 2 library",
   "main": "lib/ng2-split-pane.js",
   "scripts": {
@@ -32,18 +32,16 @@
   "homepage": "https://github.com/wannabegeek/ng2-split-pane/#readme",
   "dependencies": {},
   "devDependencies": {
-    "typescript": "^2.2.2",
-    "@angular/animations": "^4.0.1",
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/compiler-cli": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/platform-server": "^4.0.1",
-    "rxjs": "^5.2.0",
-    "zone.js": "^0.8.5"
+    "typescript": "^3.7.5",
+    "@angular/animations": "^9.0.1",
+    "@angular/compiler": "^9.0.1",
+    "@angular/compiler-cli": "^9.0.1",
+    "@angular/core": "^9.0.1",
+    "@angular/forms": "^9.0.1",
+    "@angular/platform-browser": "^9.0.1",
+    "@angular/platform-browser-dynamic": "^9.0.1",
+    "@angular/platform-server": "^9.0.1",
+    "rxjs": "^6.5.4",
+    "zone.js": "^0.10.2"
   }
 }
